[project]
name = "dip-coursework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "opencv-contrib-python>=4.12.0.88",
    "opencv-python>=4.12.0.88",
    "scikit-image>=0.25.2",
    "scipy>=1.16.2",
    "tqdm>=4.67.1",
]
